# infra

./: .gitignore  LICENCE.md  README.md  pyproject.toml
env/: envvars  extravars
project/: site.yaml
project/roles/maintenance/tasks/: main.yaml
project/roles/maintenance/templates/: index.html.j2
project/roles/setup/tasks/: main.yaml
project/roles/website/files/: index.html
project/roles/website/tasks/: main.yaml
project/roles/wordpress/defaults/: main.yaml
project/roles/wordpress/tasks/: main.yaml
project/roles/wordpress/templates/: wp-config.php.j2
project/roles/wordpress/vars/: main.yaml
