[project]
name = "la-chevre-grisette"
version = "1.0.0"
description = "La chèvre Grisette"
authors = [
    {name = "La chèvre Grisette", email = "bonjour@lachevregrisette.fr"},
]
license = {file = "LICENCE.md"}
readme = "README.md"
requires-python = ">= 3.11"

dependencies = [
    "ansible-runner~=2.3.3",
    "ansible~=8.2.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[tool.rye.scripts]
deploy = { cmd = "ansible-runner run . -p site.yaml", env-file = ".env" }
test = { cmd = "python -m http.server -d project/roles/maintenance/files 8000" }

[tool.hatch.metadata]
allow-direct-references = true
